[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "value_iteration"
version = "1.0.0"
maintainers = [
  { name="Malcolm Connolly", email="m.connolly4@lancaster.ac.uk" },
]
authors = [
  { name="Malcolm Connolly", email="m.connolly4@lancaster.ac.uk"},
]
description = "value iteration for Markov Decision Processes"
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
homepage = "https://github.com/malcolm-connolly/value_iteration"